# apertium-pol

./: .gitattributes  AUTHORS  Makefile.am  README  apertium-pol.pc.in  apertium-pol.pol.acx  apertium-pol.pol.dix  apertium-pol.pol.rlx  apertium-pol.pol.tsx  configure.ac  modes.xml
test/: analysis-input.txt  analysis-morph-expected.txt  tests.json
